tests/snapshots/render__boot_sessions_focus_user_and_system_groups.snap
---
source: tests/render.rs
assertion_line: 174
expression: "render_buf(&mut app, 80, 16)"
---
dogma  [chat]   notifs    tasks    plans    skills    cron    sources    memory 
Sessions  · / search        # + new chat                                        
────────────────────────────                                                    
▶ + new chat               │                                                    
    refactor the parser    │no messages yet — type below and press Enter to star
    tui layout design      │                                                    
  ── system (2) ───────────│                                                    
    Cron: pr-state         │                                                    
    Cron: issue-tracker    │                                                    
                           │                                                    
                           │                                                    
                           │                                                    
                           │┌ input · ↓ or i to focus ─────────────────────────┐
                           ││                                                  │
                           │└──────────────────────────────────────────────────┘
NORMAL · sessions │ idle │ session: + new chat │ ○ ws offline │ ctx — Enter open
