tests/snapshots/render__command_mode_shows_autocomplete_menu.snap
---
source: tests/render.rs
assertion_line: 336
expression: "render_buf(&mut app, 80, 12)"
---
dogma  [chat]   notifs    tasks    plans    skills    cron    sources    memory 
Sessions  · / search        # + new chat                                        
────────────────────────────                                                    
▶ + new chat               │                                                    
    session                │no messages yet — type below and press Enter to star
                           │                                                    
                           │                                                    
                           │                                                    
                           │┌ input · ↓ or i to focus ─────────────────────────┐
                           ││                                                  │
                           │└──────────────────────────────────────────────────┘
:s▏   skills  sources   Tab complete · Enter run · Esc cancel
