tests/snapshots/render__help_overlay_renders_centered.snap
---
source: tests/render.rs
assertion_line: 341
expression: "render_buf(&mut app, 100, 30)"
---
dogma  [chat]   notifs    tasks    plans    skills    cron    sources    memory    diag             
Sessions  · ┌ help ────────────────────────────────────────────────────────────────────┐            
────────────│GLOBAL                                                                    │            
▶ + new chat│  Tab / S-Tab  cycle tabs    :  command    ?  help    q  quit             │            
    (no sess│  Ctrl+C  stop the running agent (or quit)                                │art         
            │COMMANDS   (Tab autocompletes; singular or plural)                        │            
            │  tabs     :chat  :notifs  :tasks  :plans  :skills                        │            
            │  actions  :new  :fork  :resume  :rename  :delete  :reload  :q            │            
            │CHAT                                                                      │            
            │  Sessions  ↑↓/jk walk · Enter/→ open · / search                          │            
            │  Messages  ↑↓/jk walk · g/G top/bot · PgUp/Dn · Enter expand             │            
            │            i input · Ctrl+B sidebar · Ctrl+P panel · Ctrl+F files        │            
            │  Block     ↑↓/jk scroll · g/G top/bot · PgUp/Dn · Esc/← back             │            
            │  Input     Enter → insert · any key types · ↑/Esc back                   │            
            │  Insert    Enter send · Shift-Enter newline · Esc back                   │            
            │            Alt+←/→ word · Alt+Bksp del word · Up/← at edge → blocks      │            
            │  Poll      ↑↓ option · ←→ question · Space select · Enter ok · Esc skip  │            
            │  Plan      shows as the latest block · a approve · d decline (a chat     │            
            │            or block view; navigate freely without answering)             │            
            │  Files     ↑↓ list · Enter diff · ↑↓ scroll · r refresh · Esc back       │            
            │NOTIFS                                                                    │            
            │  ↑↓/jk move · 1-9 answer poll · d dismiss · r refresh · Enter detail     │            
            │TASKS · PLANS · SKILLS                                                    │            
            │  ↑↓/jk move · Enter/→ detail · r refresh                                 │            
            │                                                                          │            
            │press any key to close                                                    │            
            │                                                                          │───────────┐
            │                                                                          │           │
            └──────────────────────────────────────────────────────────────────────────┘───────────┘
HELP │ idle │ session: + new chat │ ○ ws offline │ ctx —                              press any key
