tests/snapshots/render__merged_sidebar_and_statusbar_distinguish_two_instances.snap
---
source: tests/render.rs
assertion_line: 183
expression: "render_buf(&mut app, 100, 16)"
---
dogma  [chat]   notifs    tasks    plans    skills    cron    sources    memory    diag             
Sessions  · / search          # + new chat                                                          
──────────────────────────────                                                                      
▶ ● local + new chat         │                                                                      
  ● local   refactor the pars│         no messages yet — type below and press Enter to start        
  ◆ vm   deploy pipeline     │                                                                      
                             │                                                                      
                             │                                                                      
                             │                                                                      
                             │                                                                      
                             │                                                                      
                             │                                                                      
                             │┌ input · ↓ or i to focus ───────────────────────────────────────────┐
                             ││                                                                    │
                             │└────────────────────────────────────────────────────────────────────┘
NORMAL · sessions │ idle │ session: + new chat │ ● local · ◆ vm │ ctx — Enter open · / search · ? he
