tests/snapshots/render__new_chat_picker_lists_instances.snap
---
source: tests/render.rs
assertion_line: 202
expression: "render_buf(&mut app, 100, 16)"
---
dogma  [chat]   notifs    tasks    plans    skills    cron    sources    memory    diag             
Sessions  · / search          # + new chat                                                          
──────────────────────────────                                                                      
  ● local + new chat         │                                                                      
    (no sessions yet)        │         no messages yet — type below and press Enter to start        
                             │                                                                      
                             │                                                                      
                             │                                                                      
                             │                                                                      
                             │┌ new chat ──────────────────────────────────────────────────────────┐
                             ││  instance                                                          │
                             ││                                                                    │
                             ││▸ ● local                                                           │
                             ││  ◆ vm                                                              │
                             │└────────────────────────────────────────────────────────────────────┘
NEW CHAT │ idle │ session: + new chat │ ● local · ◆ vm │ ctx — ←→ section · ↑↓ pick · Enter start ·
