tests/snapshots/render__plans_tab_list_and_detail.snap
---
source: tests/render.rs
assertion_line: 506
expression: "render_buf(&mut app, 100, 22)"
---
dogma   chat    notifs    tasks   [plans]   skills    cron    sources    memory    diag             
Plans (1) · +1 hidden · a           # Refactor the parser pipeline                                  
────────────────────────────────────                                                                
▶ ◷ Refactor the parser pipeline   │status     pending                                              
                                   │task       t1                                                   
                                   │runtime    claude                                               
                                   │created    2026-04-29 11:00:00                                  
                                   │                                                                
                                   │Goal                                                            
                                   │                                                                
                                   │Split the monolithic parse loop into named steps.               
                                   │                                                                
                                   │Steps                                                           
                                   │                                                                
                                   │1. Extract `prep` step                                          
                                   │2. Extract `validate` step                                      
                                   │3. Extract `apply` step                                         
                                   │4. Wire the pipeline registry                                   
                                   │                                                                
                                   │                                                                
                                   │                                                                
NORMAL · plans │ ○ ws offline                           ↑↓/jk move · Enter open · a all · r refresh
